--- a/index.html
+++ b/index.html
@@ -27,57 +27,80 @@
     }
   </style>
   <body>
-    <h1>1번째 고양이 가라사대</h1>
-    <form>
-      <input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
-      <button type="submit">생성</button>
-    </form>
-    <div class="main-card">
-      <img
-        src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react"
-        alt="고양이"
-        width="400"
-      />
-      <button>🤍</button>
-    </div>
-    <ul class="favorites">
-      <li>
-        <img
-          src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react"
-          alt="고양이"
-        />
-      </li>
-      <li>
-        <img
-          src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react"
-          alt="고양이"
-        />
-      </li>
-      <li>
-        <img
-          src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react"
-          alt="고양이"
-        />
-      </li>
-    </ul>
-    <script>
+    <div id="app"></div>
+
+    <!-- 참고) https://ko.reactjs.org/docs/add-react-to-a-website.html#add-react-in-one-minute -->
+    <script
+      src="https://unpkg.com/react@18/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+      crossorigin
+    ></script>
+
+    <!-- JSX -->
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
+    <script type="text/babel">
       const get = (el) => {
         return document.querySelector(el);
-      }
+      };
 
-      // 좋아요 버튼 가져오기
-      const likeButton = get(".main-card button");
-      
-      // 좋아요 버튼 클릭 이벤트 (하트 색 바꾸기)
-      likeButton.addEventListener("click", () => {
-        likeButton.innerHTML = "❤️";
-      })
-      const favorites = get(".favorites");
-      const newFavoriteImage = document.createElement("img");
-      newFavoriteImage.src = "";
-      const li = document.createElement("li");
-      li.appendChild(newFavoriteImage);
-      favorites.appendChild(li);
+      const app = get("#app");
+
+      const title = <h1>1번째 고양이 가라사대</h1>;
+
+      const form = (
+        <form>
+          <input
+            type="text"
+            name="name"
+            placeholder="영어 대사를 입력해주세요"
+          />
+          <button type="submit">생성</button>
+        </form>
+      );
+
+      const catItem = (
+        <li>
+          <img src="https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript"></img>
+        </li>
+      );
+
+      const mainCard = (
+        <div class="main-card">
+          <img
+            src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react"
+            alt="고양이"
+            width="400"
+          />
+          <button>🤍</button>
+        </div>
+      );
+
+      const FOO = "hello world";
+
+      const favorites = (
+        <ul class="favorites">
+          {FOO === "hello world" ? "true" : "false"}
+          {catItem}
+          {catItem}
+          {catItem}
+        </ul>
+      );
+
+      // react는 최상위 태그가 하나여야 함
+      const container = (
+        <div>
+          {title}
+          {form}
+          {mainCard}
+          {favorites}
+        </div>
+      );
+
+      ReactDOM.render(container, app);
     </script>
   </body>
 </html>
