--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
       const app = get("#app");
 
       const Title = (props) => {
-        console.log(props);
         return <h1>{props.children}</h1>;
       };
 
@@ -107,17 +106,23 @@
         const [counter, setCounter] = React.useState(1);
         console.log("카운터", counter);
 
+        // ----
+        const [mainCat, setMainCat] = React.useState(
+          "https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react"
+        );
+
         function handleFormSubmit(e) {
           e.preventDefault();
           console.log("form 전송됨");
           setCounter(counter + 1);
+          setMainCat("https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/changed");
         }
 
         return (
           <div>
             <Title>{counter}번째 고양이 가라사대</Title>
             <Form handleFormSubmit={handleFormSubmit} />
-            <MainCard img="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" />
+            <MainCard img={mainCat} />
             <Favorites />
           </div>
         );
