--- a/index.html
+++ b/index.html
@@ -72,10 +72,16 @@
       };
 
       const Favorites = () => {
+        const CAT1 = "https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react";
+        const CAT2 = "https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/meow";
+        const CAT3 = "https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript";
+        const cats = [CAT1, CAT2];
+        // 리스트 요소는 unique한 Key값을 가지고 있어야 한다.
         return (
           <ul className="favorites">
-            <CatItem img="https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn" />
-            <CatItem img="https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript" />
+            {cats.map((cat) => (
+              <CatItem img={cat} key={cat} />
+            ))}
           </ul>
         );
       };
@@ -102,7 +108,7 @@
       };
 
       // react는 최상위 태그가 하나여야 함
-      const Container = () => {
+      const App = () => {
         const [counter, setCounter] = React.useState(1);
         console.log("카운터", counter);
 
@@ -128,7 +134,7 @@
         );
       };
 
-      ReactDOM.render(<Container />, app);
+      ReactDOM.render(<App />, app);
     </script>
   </body>
 </html>
