조건부렌더링 & useEffect

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
 
       const Favorites = ({ favorites }) => {
         // 리스트 요소는 unique한 Key값을 가지고 있어야 한다.
+        if (favorites.length === 0) {
+          return <div>사진 위 하트를 눌러 고양이 사진을 저장해주세요.</div>;
+        }
         return (
           <ul className="favorites">
             {favorites.map((cat) => (
@@ -129,40 +132,61 @@
         );
       };
 
-      const MainCard = ({ img, onHeartClick }) => {
+      const MainCard = ({ img, onHeartClick, alreadyFavorite }) => {
+        const heartIcon = alreadyFavorite ? "💖" : "🤍";
         return (
           <div className="main-card">
             <img src={img} alt="고양이" width="400" />
-            <button onClick={onHeartClick}>🤍</button>
+            <button onClick={onHeartClick}>{heartIcon}</button>
           </div>
         );
       };
 
       // react는 최상위 태그가 하나여야 함
       const App = () => {
-        // counter 상태관리
-        const [counter, setCounter] = React.useState(
-          jsonLocalStorage.getItem("counter") || 0
-        );
-
         const CAT1 = "https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react";
         const CAT2 = "https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/meow";
         const CAT3 = "https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript";
         const cats = [CAT1, CAT2, CAT3];
 
+        // counter 상태관리
+        const [counter, setCounter] = React.useState(() => {
+          return jsonLocalStorage.getItem("counter");
+        });
+
         // 고양이 image 상태관리
         const [mainCat, setMainCat] = React.useState(CAT1);
+
         // favorites list 상태관리
-        const [favorites, setFavorites] = React.useState(
-          jsonLocalStorage.getItem("favorites") || []
-        );
+        const [favorites, setFavorites] = React.useState(() => {
+          return jsonLocalStorage.getItem("favorites") || [];
+        });
+
+        const alreadyFavorite = favorites.includes(mainCat);
+
+        // 앱 진입 시 바로 api 호출
+        async function setInitialCat() {
+          const newCat = await fetchCat("first cat");
+          console.log(newCat);
+          setMainCat(newCat);
+        }
+        // 함수가 불릴 순간을 제한. 빈배열 -> 컴포넌트가 처음 나타날 때 불림. counter 변수가 바뀔 때마다 바뀜
+
+        React.useEffect(() => {
+          setInitialCat();
+        }, []);
+
+        console.log("hello");
 
         async function updateMainCat(value) {
           const newCat = await fetchCat(value);
           setMainCat(newCat);
-          const nextCounter = counter + 1;
-          setCounter(nextCounter);
-          jsonLocalStorage.setItem("counter", nextCounter);
+
+          setCounter((prev) => {
+            const nextCounter = prev + 1;
+            jsonLocalStorage.setItem("counter", nextCounter);
+            return nextCounter;
+          });
         }
 
         function handleHeartClick() {
@@ -171,11 +195,17 @@
           jsonLocalStorage.setItem("favorites", nextFavorites);
         }
 
+        const counterTitle = counter === null ? "" : `${counter}번째 `;
+
         return (
           <div>
-            <Title>{counter}번째 고양이 가라사대</Title>
+            <Title>{counterTitle}고양이 가라사대</Title>
             <Form updateMainCat={updateMainCat} />
-            <MainCard img={mainCat} onHeartClick={handleHeartClick} />
+            <MainCard
+              img={mainCat}
+              onHeartClick={handleHeartClick}
+              alreadyFavorite={alreadyFavorite}
+            />
             <Favorites favorites={favorites} />
           </div>
         );
