--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       src="https://unpkg.com/react@18/umd/react.development.js"
       crossorigin
     ></script>
+    <!-- 개발용 react library -->
     <script
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
       crossorigin
